--- a/src/Server/servlet/web.xml
+++ b/src/Server/servlet/web.xml
@@ -2,20 +2,20 @@
 <web-app>
     <servlet>
         <servlet-name>login</servlet-name>
-        <servlet-class>loginServlet</servlet-class>
+        <servlet-class>Server.servlet.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
-        <url-pattern>/g</url-pattern>
+        <url-pattern>/l</url-pattern>
     </servlet-mapping>
     <servlet>
-        <servlet-name>login1</servlet-name>
-        <servlet-class>loginServlet1</servlet-class>
+        <servlet-name>reg</servlet-name>
+        <servlet-class>Server.servlet.RegisterServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>login1</servlet-name>
-        <url-pattern>/login1</url-pattern>
-        <url-pattern>/g1</url-pattern>
+        <servlet-name>reg</servlet-name>
+        <url-pattern>/reg</url-pattern>
+        <url-pattern>/r</url-pattern>
     </servlet-mapping>
 </web-app>
